--- a/index.html
+++ b/index.html
@@ -21,13 +21,18 @@
         body{
 
         }
-        .divGit{
-            
+        .divMp4{
+            width: 100%;
+            height: 1vh;
 
         }
     </style>
     <body>
-        <div class="divGit"><img src="/23325-334689174_small.gif" alt=""></div>
+        <div class="divMp4">
+            <video id="myVideo" controls>
+                <source src="/path/23325-334689174_small.mp4" type="video/mp4"/>
+            </video>
+        </div>
         <!-- Bootstrap JavaScript Libraries -->
         <script
             src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
