--- a/index.html
+++ b/index.html
@@ -19,20 +19,29 @@
     </head>
     <style>
         body{
-
+            margin: 0;
+            padding: 0;
         }
-        .divMp4{
+        .divmp4{
             width: 100%;
-            height: 1vh;
-
+            height: 100vh;
+        }
+        video{
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
         }
     </style>
     <body>
-        <div class="divMp4">
-            <video id="myVideo" controls>
-                <source src="/path/23325-334689174_small.mp4" type="video/mp4"/>
+        <div class="divmp4">
+            <video id="myVideo" autoplay muted>
+                <source src="/path/index-head.mp4" type="video/mp4"/>
             </video>
         </div>
+        
+        <script>
+         
+        </script>
         <!-- Bootstrap JavaScript Libraries -->
         <script
             src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
