--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 </head>
 <body>
     <div class="divMp4">
-        <video id="myVideo" autoplay muted>
+        <video id="myVideo" autoplay muted playsinline>
             <source src="/path/index-head.mp4" type="video/mp4">
         </video>
     </div>
