--- a/index.html
+++ b/index.html
@@ -1,88 +1,99 @@
 <!DOCTYPE html>
 <html lang="zh">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>劉育菘的個人履歷</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="/styles/video.css" />
+    <link rel="stylesheet" href="/styles/nav.css" />
     <style>
-        body {
-            background-color: #ffffff;
-            margin: 0;
-            padding: 0;
-            height: 100%;
-        }
-        .divMp4 {
-            width: 100%;
-            height: 100vh;
-            position: relative;
-        }
-        video {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-        }
-        header {
-            margin-top: -1px;
-        }
-        a img {
-            height: 30px;
-            width: 50px;
-        }
-        .content {
-            opacity: 0;
-            text-align: center;
-            position: absolute;
-            z-index: 9999;
-            transition: opacity 1s ease-in-out;
-            top: 30%;
-            left: 20%;
-        }
-        .content.show {
-            display: block;
-            opacity: 1;
-        }
-        #content1 { top: 15%; left: 20%; }
-        #content2 { top: 30%; left: 50%; }
-        #content3 { top: 50%; left: 70%; }
-        #content4 { top: 65%; left: 40%; }
-        .content img { max-width: 100%; margin: 0px; }
+      body {
+        background-color: #ffffff;
+        margin: 0;
+        padding: 0;
+        height: 100%;
+      }
+
+      
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <div class="divMp4">
-        <video id="myVideo" autoplay muted playsinline>
-            <source src="/path/index-head.mp4" type="video/mp4">
-        </video>
+      <video id="myVideo" autoplay muted playsinline>
+        <source src="/path/index-head.mp4" type="video/mp4" />
+      </video>
     </div>
     <div id="contentDiv">
-        <div class="content" id="content1"><img src="/path/textfont/我.png" alt="我"></div>
-        <div class="content" id="content2"><img src="/path/textfont/的.png" alt="的"></div>
-        <div class="content" id="content3"><img src="/path/textfont/履.png" alt="履"></div>
-        <div class="content" id="content4"><img src="/path/textfont/歷.png" alt="歷"></div>
+      <div class="content" id="content1">
+        <img src="/path/textfont/我.png" alt="我" />
+      </div>
+      <div class="content" id="content2">
+        <img src="/path/textfont/的.png" alt="的" />
+      </div>
+      <div class="content" id="content3">
+        <img src="/path/textfont/履.png" alt="履" />
+      </div>
+      <div class="content" id="content4">
+        <img src="/path/textfont/歷.png" alt="歷" />
+      </div>
     </div>
-    <header>
-        <ul class="nav justify-content-end">
-            <li class="nav-item"><a class="nav-link" href="#"><img src="/path/textfont/關於-小.png" alt=""></a></li>
-            <li class="nav-item"><a class="nav-link" href="#"><img src="/path/textfont/技術-小.png" alt=""></a></li>
-            <li class="nav-item"><a class="nav-link" href="#"><img src="/path/textfont/經歷-小.png" alt=""></a></li>
-            <li class="nav-item"><a class="nav-link disabled"><img src="/path/textfont/作品-小.png" alt=""></a></li>
+    <nav class="navbar navbar-expand-lg">
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ms-auto justify-content-end">
+          <li class="nav-item">
+            <a class="nav-link" href="#">
+              <img class="nav-button" src="/path/textfont/關於-小.png" alt="" />
+              <img class="button-img" src="/path/button.png" />
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">
+              <img class="nav-button" src="/path/textfont/技術-小.png" alt="" />
+              <img class="button-img" src="/path/button.png" />
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">
+              <img class="nav-button" src="/path/textfont/經歷-小.png" alt="" />
+              <img class="button-img" src="/path/button.png" />
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">
+              <img class="nav-button" src="/path/textfont/作品-小.png" alt="" />
+              <img class="button-img" src="/path/button.png" />
+            </a>
+          </li>
         </ul>
-    </header>
-    <script>
-        document.addEventListener("DOMContentLoaded", function () {
-            var video = document.getElementById("myVideo");
-            var contentDivs = document.querySelectorAll("#contentDiv .content");
-            video.addEventListener("ended", function () {
-                contentDivs.forEach((div, index) => {
-                    setTimeout(() => {
-                        div.classList.add("show"); 
-                    }, index * 800); 
-                });
-            });
-        });
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
-</body>
+      </div>
+    </nav>
+    <script src="/video.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+      integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
