--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         height: 100%;
       }
       .div-about {
-        height: 100vh;
+        height: 80vh;
       }
       .div-skill{
         height: 100vh;
@@ -92,9 +92,13 @@
       </div>
     </nav>
     <main>
-      <div class="div-about" id="div-about"></div>
+      <div class="div-about" id="div-about">
+        <div class="card"></div>
+
+      </div>
       <div class="div-skill" id="div-skill"></div>
     </main>
+    <footer></footer>
     <script>
      
     </script>
