--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
           <div class="row">
             <div class="col-12 col-md-6 card about-card px-4">
               <h2 class="text-center pt-5">關於我</h2>
-              <h4 id="about-text1" class="pt-3">Hi! 我是育菘</h4>
+              <h4 id="about-text1" class="pt-3">您好! 我是育菘</h4>
               <p>
                 我具有電子工程系相關學習經歷, 在科技業內曾擔任設備/製程工程師,
               </p>
