--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
             <div class="col">
               <!-- <h2 class="text-center">技術</h2> -->
               <p class="text-black-50">
-                如左圖, 為我掌握的技術熟悉度, 學習中還有技術如jQuery、Figma等...
+                如圖, 為我掌握的技術熟悉度, 學習中還有技術如jQuery、Figma等...
               </p>
               <p class="text-black-50">
                 資料庫負責設計, 會員資料相關、購物車訂單、訂單狀態 為主,
