--- a/index.html
+++ b/index.html
@@ -66,15 +66,27 @@
       }
 
       .div-skill {
-        box-shadow: inset 0 25px 50px rgba(221, 221, 221, 0.8);
+        box-shadow: inset 0 25px 100px rgba(221, 221, 221, 0.8);
         background-color: rgba(199, 199, 199, 0.5);
         height: 100vh;
         border: 0;
         margin: 0;
         padding-top: 150px;
       }
-
+      .div-experience{
+        height: auto;
+        box-shadow: inset 0 25px 100px rgba(165, 165, 165, 0.8);
+        background-color: rgba(255, 255, 255, 0.5);
+        padding: 75px 0 75px 0;
+      }
+      .div-works{
+        height: auto;
+        box-shadow: inset 0 25px 100px rgba(221, 221, 221, 0.8);
+        background-color: rgba(199, 199, 199, 0.5);
+        padding: 75px 0 75px 0;
+      }
       .path-img {
+        
         box-shadow: 8px 8px 8px rgba(61, 61, 61, 0.5);
       }
 
@@ -354,6 +366,66 @@
                     </tr>
                   </tbody>
                 </table>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="div-experience" id="div-experience">
+        <div class="container">
+          <div class="row">
+            <div class="col">
+              <h2>
+                工作經歷
+              </h2>
+              <li class="pt-3 fs-5 fw-bolder">製程/設備工程師</li>
+              <p class="px-4 pt-2 mx-1">2023/04-2024/03</p>
+              <h5 class="fw-bolder px-4 ">友達光電股份有限公司</h5>
+              <li class="px-4">針對生產良率提出問題、改善計畫與降低生產成本</li>
+              <li class="px-4">進行全面品質改善 (如：產線/產品異常分析與解決方案)</li>
+              <li class="px-4">產線機台保養維修, 值班與機台問題處理</li>
+              <li class="px-4">新產品設計階段除錯與來料規格制定</li>
+              <li class="px-4">其他專案協助</li>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="div-works">
+        <div class="container">
+          <div class="row">
+            <div class="col">
+              <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="/path/iSpan專題作品 p1.gif" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="/path/iSpan專題作品 p2.gif" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="/path/iSpan專題作品 p3.gif" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="/path/iSpan專題作品 p4.gif" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="/path/iSpan專題作品 p5.gif" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="/path/iSpan專題作品 p6.gif" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="/path/iSpan專題作品 p7.gif" class="d-block w-100" alt="...">
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
               </div>
             </div>
           </div>
