--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link rel="stylesheet" href="/styles/video.css" />
     <link rel="stylesheet" href="/styles/nav.css" />
@@ -73,20 +77,27 @@
         margin: 0;
         padding-top: 150px;
       }
-      .div-experience{
+      .div-experience {
         height: auto;
         box-shadow: inset 0 25px 100px rgba(165, 165, 165, 0.8);
         background-color: rgba(255, 255, 255, 0.5);
         padding: 75px 0 75px 0;
       }
-      .div-works{
+      .div-works {
         height: auto;
         box-shadow: inset 0 25px 100px rgba(221, 221, 221, 0.8);
         background-color: rgba(199, 199, 199, 0.5);
         padding: 75px 0 75px 0;
       }
+      footer {
+        height: auto;
+        box-shadow: inset 0 25px 50px rgba(87, 87, 87, 0.5);
+        background-color: rgba(0, 0, 0, 0.5);
+        padding: 0px 0 25px 0;
+        color: #ccc;
+        font-family: "Arial", sans-serif;
+      }
       .path-img {
-        
         box-shadow: 8px 8px 8px rgba(61, 61, 61, 0.5);
       }
 
@@ -375,14 +386,14 @@
         <div class="container">
           <div class="row">
             <div class="col">
-              <h2>
-                工作經歷
-              </h2>
+              <h2>工作經歷</h2>
               <li class="pt-3 fs-5 fw-bolder">製程/設備工程師</li>
               <p class="px-4 pt-2 mx-1">2023/04-2024/03</p>
-              <h5 class="fw-bolder px-4 ">友達光電股份有限公司</h5>
+              <h5 class="fw-bolder px-4">友達光電股份有限公司</h5>
               <li class="px-4">針對生產良率提出問題、改善計畫與降低生產成本</li>
-              <li class="px-4">進行全面品質改善 (如：產線/產品異常分析與解決方案)</li>
+              <li class="px-4">
+                進行全面品質改善 (如：產線/產品異常分析與解決方案)
+              </li>
               <li class="px-4">產線機台保養維修, 值班與機台問題處理</li>
               <li class="px-4">新產品設計階段除錯與來料規格制定</li>
               <li class="px-4">其他專案協助</li>
@@ -394,36 +405,84 @@
         <div class="container">
           <div class="row">
             <div class="col">
-              <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+              <div
+                id="carouselExampleControls"
+                class="carousel slide"
+                data-bs-ride="carousel"
+              >
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="/path/iSpan專題作品 p1.gif" class="d-block w-100" alt="...">
+                    <img
+                      src="/path/iSpan專題作品 p1.gif"
+                      class="d-block w-100"
+                      alt="..."
+                    />
                   </div>
                   <div class="carousel-item">
-                    <img src="/path/iSpan專題作品 p2.gif" class="d-block w-100" alt="...">
+                    <img
+                      src="/path/iSpan專題作品 p2.gif"
+                      class="d-block w-100"
+                      alt="..."
+                    />
                   </div>
                   <div class="carousel-item">
-                    <img src="/path/iSpan專題作品 p3.gif" class="d-block w-100" alt="...">
+                    <img
+                      src="/path/iSpan專題作品 p3.gif"
+                      class="d-block w-100"
+                      alt="..."
+                    />
                   </div>
                   <div class="carousel-item">
-                    <img src="/path/iSpan專題作品 p4.gif" class="d-block w-100" alt="...">
+                    <img
+                      src="/path/iSpan專題作品 p4.gif"
+                      class="d-block w-100"
+                      alt="..."
+                    />
                   </div>
                   <div class="carousel-item">
-                    <img src="/path/iSpan專題作品 p5.gif" class="d-block w-100" alt="...">
+                    <img
+                      src="/path/iSpan專題作品 p5.gif"
+                      class="d-block w-100"
+                      alt="..."
+                    />
                   </div>
                   <div class="carousel-item">
-                    <img src="/path/iSpan專題作品 p6.gif" class="d-block w-100" alt="...">
+                    <img
+                      src="/path/iSpan專題作品 p6.gif"
+                      class="d-block w-100"
+                      alt="..."
+                    />
                   </div>
                   <div class="carousel-item">
-                    <img src="/path/iSpan專題作品 p7.gif" class="d-block w-100" alt="...">
+                    <img
+                      src="/path/iSpan專題作品 p7.gif"
+                      class="d-block w-100"
+                      alt="..."
+                    />
                   </div>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <button
+                  class="carousel-control-prev"
+                  type="button"
+                  data-bs-target="#carouselExampleControls"
+                  data-bs-slide="prev"
+                >
+                  <span
+                    class="carousel-control-prev-icon"
+                    aria-hidden="true"
+                  ></span>
                   <span class="visually-hidden">Previous</span>
                 </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <button
+                  class="carousel-control-next"
+                  type="button"
+                  data-bs-target="#carouselExampleControls"
+                  data-bs-slide="next"
+                >
+                  <span
+                    class="carousel-control-next-icon"
+                    aria-hidden="true"
+                  ></span>
                   <span class="visually-hidden">Next</span>
                 </button>
               </div>
@@ -432,10 +491,17 @@
         </div>
       </div>
     </main>
-    <footer></footer>
-    <script>
-    
-    </script>
+    <footer>
+      <h2 class="pt-3 text-center">聯絡我</h2>
+      <div class="text-center">
+        <p><i class="fa-solid fa-phone px-1 " ></i>Mobile: 0962033585</p>
+        <p><i class="fa-solid fa-envelope px-1 fa-lg"></i>Email: nimabo0121@gmail.com</p>
+        <a href="https://github.com/nimabo0121">
+          <i class="fa-brands fa-github fa-2xl" style="color: #000000;"></i>
+        </a>
+      </div>
+    </footer>
+    <script></script>
     <script src="/frames.js"></script>
     <script src="/canvas.js"></script>
     <script src="/nav.js"></script>
