--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="/styles/canvas.css" />
     <link rel="stylesheet" href="/styles/table.css" />
     <link rel="stylesheet" href="/styles/frames.css" />
+    <link rel="stylesheet" href="/styles/work.css" />
     <style>
       body {
         margin: 0;
@@ -100,7 +101,7 @@
       .path-img {
         box-shadow: 8px 8px 8px rgba(61, 61, 61, 0.5);
       }
-
+      
       @media (max-width: 768px) {
         .div-about {
           padding: 50px;
@@ -485,6 +486,9 @@
                   ></span>
                   <span class="visually-hidden">Next</span>
                 </button>
+                <button class="fullscreen-btn" id="fullscreenToggle">
+                  <i class="fa fa-expand" aria-hidden="true"></i>
+                </button>
               </div>
             </div>
           </div>
@@ -494,14 +498,20 @@
     <footer>
       <h2 class="pt-3 text-center">聯絡我</h2>
       <div class="text-center">
-        <p><i class="fa-solid fa-phone px-1 " ></i>Mobile: 0962033585</p>
-        <p><i class="fa-solid fa-envelope px-1 fa-lg"></i>Email: nimabo0121@gmail.com</p>
+        <p><i class="fa-solid fa-phone px-1"></i>Mobile: 0962033585</p>
+        <p>
+          <i class="fa-solid fa-envelope px-1 fa-lg"></i>Email:
+          nimabo0121@gmail.com
+        </p>
         <a href="https://github.com/nimabo0121">
-          <i class="fa-brands fa-github fa-2xl" style="color: #000000;"></i>
+          <i class="fa-brands fa-github fa-2xl" style="color: #000000"></i>
         </a>
       </div>
     </footer>
-    <script></script>
+    <script>
+      
+    </script>
+    <script src="/work.js"></script>
     <script src="/frames.js"></script>
     <script src="/canvas.js"></script>
     <script src="/nav.js"></script>
