--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
             <div class="col">
               <h2>工作經歷</h2>
               <li class="pt-3 fs-5 fw-bolder">製程/設備工程師</li>
-              <p class="px-4 pt-2 mx-1">2023/04-2024/03</p>
+              <p class="px-4 pt-2 mx-1" type="text">2023/04-2024/03</p>
               <h5 class="fw-bolder px-4">友達光電股份有限公司</h5>
               <li class="px-4">針對生產良率提出問題、改善計畫與降低生產成本</li>
               <li class="px-4">
