--- a/index.html
+++ b/index.html
@@ -103,7 +103,11 @@
         box-shadow: 8px 8px 8px rgba(61, 61, 61, 0.5);
       }
       @media (max-width: 768px) {
-      
+        .no-phone-link {
+    -webkit-touch-callout: none; 
+    -webkit-user-select: none; 
+    user-select: none; 
+  }
         .div-about {
           padding: 50px;
           height: auto;
@@ -258,7 +262,7 @@
                 <div
                   class="col-12 col-sm-6 col-md-5 card text-center card-text mx-2 mb-4"
                 >
-                  <p class="pt-4">
+                  <p class="pt-4 no-phone-link">
                     建國科技大學
                     <br />
                     電子工程系
@@ -269,7 +273,7 @@
                 <div
                   class="col-12 col-sm-6 col-md-5 card text-center card-text mx-2 mb-4"
                 >
-                  <p class="pt-4">
+                  <p class="pt-4 no-phone-link">
                     iSpan 資展國際<br />
                     前端工程師就業養成班<br />
                     2024/03 - 2024/08<br />
@@ -390,7 +394,7 @@
             <div class="col">
               <h2>工作經歷</h2>
               <li class="pt-3 fs-5 fw-bolder">製程/設備工程師</li>
-              <p class="px-4 pt-2 mx-1" type="text">2023/04-2024/03</p>
+              <p class="px-4 pt-2 mx-1 no-phone-link" type="text">2023/04-2024/03</p>
               <h5 class="fw-bolder px-4">友達光電股份有限公司</h5>
               <li class="px-4">針對生產良率提出問題、改善計畫與降低生產成本</li>
               <li class="px-4">
