skill height auto
skill height auto

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       .div-skill {
         box-shadow: inset 0 25px 100px rgba(221, 221, 221, 0.8);
         background-color: rgba(199, 199, 199, 0.5);
-        height: 100vh;
+        height: auto;
         border: 0;
         margin: 0;
         padding-top: 150px;
@@ -316,6 +316,7 @@
                 後期側重於學習React、Node.js, 並使程式碼元件化, 實施可重複利用
               </p>
               <div class="table-card">
+                
                 <table class="table-borderless">
                   <thead>
                     <tr>
@@ -364,7 +365,7 @@
                     <tr>
                       <th scope="row">訂單相關</th>
                       <td>目前/歷史/後端刪除</td>
-                      <td>目前/歷史</td>
+                      <td>目前/歷史訂單</td>
                     </tr>
                     <tr>
                       <th scope="row"></th>
