--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
       .path-img {
         box-shadow: 8px 8px 8px rgba(61, 61, 61, 0.5);
       }
+      
       @media (max-width: 768px) {
         .div-about {
           padding: 50px;
@@ -141,6 +142,9 @@
       }
 
       @media (max-width: 576px) {
+        .fullscreen-btn i{
+          display: none;
+        }
         .card-text {
           font-size: 12px;
         }
@@ -154,6 +158,11 @@
 
         .navbar-nav {
           text-align: center;
+        }
+      }
+      @media (max-width: 375px) {
+        .fullscreen-btn i{
+          display: none;
         }
       }
     </style>
